# rs_nsga2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
benches/: evolution.rs  sorting.rs
src/: data.rs  evolve.rs  lib.rs  metrics.rs  problem.rs  sort.rs
tests/: test_evolution.rs  test_individual.rs  test_metrics.rs  test_problem.rs  test_sort.rs
